@@ -1,5 +1,5 @@
 AC_PREREQ([2.61])
-AC_INIT([dlvhex],[2.0.0],[dlvhex-devel@lists.sourceforge.net])
+AC_INIT([dlvhex2],[2.0.0],[dlvhex-devel@lists.sourceforge.net])
 AM_INIT_AUTOMAKE([-Wall gnu check-news color-tests 1.11])
 
 AC_CONFIG_SRCDIR([src/dlvhex/dlvhex.cpp])
@@ -263,11 +263,11 @@ CPPFLAGS="$CPPFLAGS -DSYS_PLUGIN_DIR='\"$sysplugindir\"'"
 
 #
 # the user plugin dir consists of the user home concatenated with
-# and USER_PLUGIN_DIR, which is .dlvhex/plugins by default and can be
+# and USER_PLUGIN_DIR, which is .dlvhex2/plugins by default and can be
 # overridden by setting USER_PLUGIN_DIR=... at configure-time
 #
 if test "$USER_PLUGIN_DIR" = ""; then
-    userplugindir=".dlvhex/plugins"
+    userplugindir=".dlvhex2/plugins"
 else
     userplugindir="$USER_PLUGIN_DIR"
 fi
@@ -458,13 +458,13 @@ DX_RTF_FEATURE([OFF])
 DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
-DX_INIT_DOXYGEN([dlvhex], [doxygen.cfg], [doc])
+DX_INIT_DOXYGEN([dlvhex2], [doxygen.cfg], [doc])
 
 
 # output autogenerated files
 AC_CONFIG_FILES([
            Makefile
-           dlvhex.pc
+           dlvhex2.pc
            examples/Makefile
            examples/tests/basic.test
            examples/tests/libclingobackend.test
